--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<html>
-<head>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9512495707028343",
-    enable_page_level_ads: true
-  });
-</script>
-</head>
-<body>It Works</body>
-</html>
+---
+layout: default
+---
